--- a/industry/templates/industry/newProject.html
+++ b/industry/templates/industry/newProject.html
@@ -54,7 +54,7 @@
                         </div>
                         <div class="row mbottom-10" style="margin-top: 5px">
                             <div class="col-lg-12 text-right">
-                                <label for="id_key_words">کلیدواژه ها</label>
+                                <label for="id_key_words" style="z-index: 2">کلیدواژه ها</label>
                                 {% if form.key_words.erros %}
                                     {% render_field form.key_words class="error w-100" %}
                                 {% else %}
