remove the smell of the first & last name

--- a/researcher/templates/researcher/layouts/initial_information.html
+++ b/researcher/templates/researcher/layouts/initial_information.html
@@ -18,7 +18,7 @@
                         <div class="col-md-3"></div>
                         <div class="col-md-5">
                             <div class="form-group">
-                                <label for="FirstName">نام و نام خانوادگی</label>
+                                <label for="Fullname">نام و نام خانوادگی</label>
                                 {% if form.fullname.errors %}
                                 {{ form.fullname|attr:"id:Fullname"|attr:"class:error w-100" }}
                             {% else %}
