--- a/researcher/templates/researcher/userInfo.html
+++ b/researcher/templates/researcher/userInfo.html
@@ -45,16 +45,15 @@
                             </div>
                         </div>
                         <div class="row">
-                            <div class="col-md-6">
-                                <label for="id_first_name">نام</label>
+                            <div class="col-md-12">
+                                <label for="id_fullname">نام و نام خانوادگی</label>
                                 <!-- <input type="text" id="FirstName" class="w-100"> -->
-                                {% render_field form.first_name class+="w-100" readonly="true" %}
+                                {% render_field form.fullname class+="w-100" readonly="true" %}
                             </div>
-                            <div class="col-md-6">
+                            <!-- <div class="col-md-6">
                                 <label for="id_last_name">نام خانوادگی</label>
-                                <!-- <input type="text" id="LastName" class="w-100"> -->
                                 {% render_field form.last_name class+="w-100" readonly="true" %}
-                            </div>
+                            </div> -->
                         </div>
                         <div class="row">
                             <div class="col-md-8">
