debug some of session's problems

--- a/researcher/templates/researcher/layouts/initial_information.html
+++ b/researcher/templates/researcher/layouts/initial_information.html
@@ -108,7 +108,7 @@
                                 </div>
                             </div>
                             <div class="form-group">
-                                <label class="rankLabel" for="rank">آخرین مقطع تحصیلی</label>
+                                <label class="rankLabel" for="rank">مقطع تحصیلی فعلی</label>
                                 <select id="rank" name="grade" class="{% if form.grade.errors %}error{% endif %}">
                                     <option selected dir="rtl" disabled>انتخاب کنید ...</option>
                                     <option value="1">کارشناسی</option>
