--- a/researcher/templates/researcher/index.html
+++ b/researcher/templates/researcher/index.html
@@ -30,9 +30,13 @@
                        role="tab" aria-selected="true">
                         جدیدترین پروژه ها
                     </a>
-                    <a class="nav-link fs-15" id="your-project" data-toggle="pill"
+                    <a class="nav-link fs-15" id="active-project" data-toggle="pill"
                        role="tab" aria-selected="false">
-                        پروژه‌های حذف شده
+                        پروژه‌های در حال انجام
+                    </a>
+                    <a class="nav-link fs-15" id="missed-project" data-toggle="pill"
+                       role="tab" aria-selected="false">
+                        پروژه‌های غیرقابل‌‌دسترسی
                     </a>
                     <a class="nav-link fs-15" id="done-project" data-toggle="pill"
                        role="tab" aria-selected="false">
@@ -112,7 +116,7 @@
                                     <i class="fas fa-cog"></i>
                                     <span>اطلاعات کاربری</span>
                                 </span>
-                            <p> می توانید کمک تا اساتید با شناخت و اطمینان بیشتری شما را انتخاب کنند.</p>
+                            <p> می توانید کمک کنید تا اساتید با شناخت و اطمینان بیشتری شما را انتخاب کنند.</p>
                         </div>
                     </div>
                 {% endfor %}
@@ -139,21 +143,69 @@
             {#                    </div>#}
             <div class="tab-content your-project" style="display: none;">
                 {% for project in my_project_list %}
-                    <div class="card project-item">
-                        <span class="header">{{ project.project_title }} <span
-                                class="sub-header">( {{ project.started }} قبل )</span></span>
-                        <span>
-                            {% for keyword in project.keyword %}
-                                <span class="border-span">{{ keyword.name }}</span>
-                            {% endfor %}
-                        </span>
-                        <span><i class="fas fa-calendar-alt"></i>این پروژه به  <span>8 ساعت</span> وقت در هفته نیاز دارد!</span>
-                        <span><i
-                                class="fas fa-hourglass-end"></i>تا اتمام پروژه <span>{{ project.finished }}</span> فرصت باقی است!</span>
-                        <button type="button" class="chamran-btn-info my-project" value="myproject"
-                                id="{{ project.PK }}">مشاهده
-                        </button>
+                    <div class="card box flow-root-display w-100">
+                        <div class="box-header">
+                            <h6>
+                                {{ project.project_title }}
+                            </h6>
+                            <div class="data-modified">
+                                <span>{{ project.started }}   قبل </span>
+                            </div>
+                            <div class="project-techniques">
+                                <ul class="mix-list hover">
+                                    {% for keyword in project.keyword %}
+                                        <li>{{ keyword.name }}</li>
+                                    {% endfor %}
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="box-body">
+                            <div class="row">
+                                <div class="col-6">
+                                    <div class="row">
+                                        <div class="col-6">
+                                            <div class="date text-center">
+                                                <div class="label">مهلت</div>
+                                                <div class="value">
+                                                    <span>{{ project.finished }}</span>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="col-6">
+                                            <div class="status text-center">
+                                                <div class="label">زمان لازم</div>
+                                                <div class="value">
+                                                    <span>{{ project.need_hour }} ساعت</span>
+                                                    <span>در هفته</span>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-6">
+                                    <button type="button" class="default-btn preview-project" id="{{ project.PK }}"
+                                            data-toggle="modal" data-target="#showProject">
+                                        مشاهده
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
                     </div>
+{#                    <div class="card project-item">#}
+{#                        <span class="header">{{ project.project_title }} <span#}
+{#                                class="sub-header">( {{ project.started }} قبل )</span></span>#}
+{#                        <span>#}
+{#                            {% for keyword in project.keyword %}#}
+{#                                <span class="border-span">{{ keyword.name }}</span>#}
+{#                            {% endfor %}#}
+{#                        </span>#}
+{#                        <span><i class="fas fa-calendar-alt"></i>این پروژه به  <span>8 ساعت</span> وقت در هفته نیاز دارد!</span>#}
+{#                        <span><i#}
+{#                                class="fas fa-hourglass-end"></i>تا اتمام پروژه <span>{{ project.finished }}</span> فرصت باقی است!</span>#}
+{#                        <button type="button" class="chamran-btn-info my-project" value="myproject"#}
+{#                                id="{{ project.PK }}">مشاهده#}
+{#                        </button>#}
+{#                    </div>#}
                 {% empty %}
                     <div class="no-project-container">
                         <div class="no-project">
@@ -179,6 +231,92 @@
                             <p> می توانید کمک تا اساتید با شناخت و اطمینان بیشتری شما را انتخاب کنند.</p>
                         </div>
                     </div>
+                {% endfor %}
+            </div>
+            <div class="tab-content missed-project" style="display: none;">
+                {% for project in missed_project_list %}
+<div class="card box flow-root-display w-100">
+                        <div class="box-header">
+                            <h6>
+                                {{ project.project_title }}
+                            </h6>
+                            <div class="data-modified">
+                                <span>{{ project.started }}   قبل </span>
+                            </div>
+                            <div class="project-techniques">
+                                <ul class="mix-list hover">
+                                    {% for keyword in project.keyword %}
+                                        <li>{{ keyword.name }}</li>
+                                    {% endfor %}
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="box-body">
+                            <div class="row">
+                                <div class="col-6">
+                                    <div class="row">
+                                        <div class="col-6">
+                                            <div class="date text-center">
+                                                <div class="label">مهلت</div>
+                                                <div class="value">
+                                                    <span>{{ project.finished }}</span>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="col-6">
+                                            <div class="status text-center">
+                                                <div class="label">زمان لازم</div>
+                                                <div class="value">
+                                                    <span>{{ project.need_hour }} ساعت</span>
+                                                    <span>در هفته</span>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-6">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+{#                    <div class="card project-item">#}
+{#                        <span class="header">{{ project.project_title }} <span#}
+{#                                class="sub-header">( {{ project.started }} قبل )</span></span>#}
+{#                        <span>#}
+{#                            {% for keyword in project.keyword %}#}
+{#                                <span class="border-span">{{ keyword.name }}</span>#}
+{#                            {% endfor %}#}
+{#                        </span>#}
+{#                        <span><i class="fas fa-calendar-alt"></i>این پروژه به  <span>8 ساعت</span> وقت در هفته نیاز دارد!</span>#}
+{#                        <span><i#}
+{#                                class="fas fa-hourglass-end"></i>تا اتمام پروژه <span>{{ project.finished }}</span> فرصت باقی است!</span>#}
+{#                    </div>#}
+                {% empty %}
+{#                    <div class="no-project-container">#}
+{#                        <div class="no-project">#}
+{#                            <img src="{% static 'img/no_project.svg' %}" alt="logo" class="icon">#}
+{#                            <h4>متاسفانه، هنوز پروژه ای متناسب با تکنیک های ثبت شده شما، ارائه نشده!</h4>#}
+{#                            <p>می توانید تکنیک های بیشتر را از طریق</p>#}
+{#                            <a href="https://www.aparat.com/chamran_team">#}
+{#                                <i class="aparat-ico"></i>#}
+{#                                <span>Chamran_Team</span>#}
+{#                            </a>#}
+{#                            <p>یاد بگیرید و در قسمت </p>#}
+{#                            <span>#}
+{#                                    <i class="fas fa-file-medical"></i>#}
+{#                                    <span>تکنیک ها</span>#}
+{#                                </span>#}
+{#                            <p>آن را ثبت کنید. با این کار شانس بیشتری برای همکاری با اساتید خواهید داشت. </p>#}
+{#                            <br>#}
+{#                            <p> همچنین با تکمیل رزومه خود از طریق </p>#}
+{#                            <span>#}
+{#                                    <i class="fas fa-cog"></i>#}
+{#                                    <span>اطلاعات کاربری</span>#}
+{#                                </span>#}
+{#                            <p> می توانید کمک تا اساتید با شناخت و اطمینان بیشتری شما را انتخاب کنند.</p>#}
+{#                        </div>#}
+{#                    </div>#}
+                    NO Missed
                 {% endfor %}
             </div>
             <div class="tab-content done-project" style="display: none;">
