--- a/expert/templates/expert/layouts/initial_information.html
+++ b/expert/templates/expert/layouts/initial_information.html
@@ -30,13 +30,13 @@
                             </div>
                             <div class="form-group">
                                 <label for="MelliCode">کد ملی</label>
-                                {% if form.melli_code.errors %}
-                                    {{ form.melli_code|attr:"id:MelliCode"|attr:"class:error w-100"|attr:"placeholder:449****841"|attr:"type:number" }}
+                                {% if form.national_code.errors %}
+                                    {{ form.national_code|attr:"id:MelliCode"|attr:"class:error w-100"|attr:"placeholder:449****841" }}
                                 {% else %}
-                                    {{ form.melli_code|attr:"id:MelliCode"|attr:"class:w-100"|attr:"placeholder:449****841"|attr:"type:number" }}
+                                    {{ form.national_code|attr:"id:MelliCode"|attr:"class:w-100"|attr:"placeholder:449****841" }}
                                 {% endif %}
                                 <div class="error">
-                                    <span class="error-body">{% render_field form.melli_code.errors %}</span>
+                                    <span class="error-body">{% render_field form.national_code.errors %}</span>
                                 </div>
                             </div>
 {#                            <div class="form-group">#}
@@ -95,12 +95,11 @@
                                     <select id="rank" name="scientific_rank">
                                 {% endif %}
                                 <option selected dir="rtl" disabled>انتخاب کنید ...</option>
-                                <option value="1">مربی</option>
-                                <option value="2">استادیار</option>
-                                <option value="3">دانشیار</option>
-                                <option value="4">استاد</option>
-                                <option value="5">استاد تمام</option>
-                                <option value="6">پژوهشگر</option>
+                                    {% for option in form.scientific_rank %}
+                                        {% if not forloop.first %}
+                                          {{ option }}
+                                        {% endif %}
+                                    {% endfor %}
                                 </select>
                                 <div class="error">
                                     <span class="error-body">{% render_field form.scientific_rank.errors %}</span>
@@ -136,9 +135,9 @@
                             <div class="form-group">
                                 <label for="HomeNum">تلفن منزل</label>
                                 {% if form.home_number.errors %}
-                                    {{ form.home_number|attr:"id:HomeNum"|attr:"class:error w-100"|attr:"placeholder:021*******"|attr:"type:number" }}
+                                    {{ form.home_number|attr:"id:HomeNum"|attr:"class:error w-100"|attr:"placeholder:021*******" }}
                                 {% else %}
-                                    {{ form.home_number|attr:"id:HomeNum"|attr:"class:w-100"|attr:"placeholder:021*******"|attr:"type:number" }}
+                                    {{ form.home_number|attr:"id:HomeNum"|attr:"class:w-100"|attr:"placeholder:021*******" }}
                                 {% endif %}
                                 <div class="error">
                                     <span class="error-body">{% render_field form.home_number.errors %}</span>
@@ -147,23 +146,12 @@
                             <div class="form-group">
                                 <label for="PhoneNum">تلفن همراه</label>
                                 {% if form.phone_number.errors %}
-                                    {{ form.phone_number|attr:"id:PhoneNum"|attr:"class:error w-100"|attr:"placeholder:09*********"|attr:"type:number" }}
+                                    {{ form.phone_number|attr:"id:PhoneNum"|attr:"class:error w-100"|attr:"placeholder:09*********" }}
                                 {% else %}
-                                    {{ form.phone_number|attr:"id:PhoneNum"|attr:"class:w-100"|attr:"placeholder:09*********"|attr:"type:number" }}
+                                    {{ form.phone_number|attr:"id:PhoneNum"|attr:"class:w-100"|attr:"placeholder:09*********" }}
                                 {% endif %}
                                 <div class="error">
                                     <span class="error-body">{% render_field form.phone_number.errors %}</span>
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                <label for="Email">پست الکترونیکی</label>
-                                {% if form.email_address.errors %}
-                                    {{ form.email_address|attr:"id:Email"|attr:"class:error w-100" }}
-                                {% else %}
-                                    {{ form.email_address|attr:"id:Email"|attr:"class:w-100" }}
-                                {% endif %}
-                                <div class="error">
-                                    <span class="error-body">{% render_field form.email_address.errors %}</span>
                                 </div>
                             </div>
                         </div>
@@ -242,13 +230,13 @@
 {#                    </div>#}
 {#                    <div class="col-md-4">#}
 {#                        <label for="MelliCode">کد ملی</label>#}
-{#                        {% if form.melli_code.errors %}#}
-{#                            {{ form.melli_code|attr:"id:MelliCode"|attr:"class:error w-100" }}#}
+{#                        {% if form.national_code.errors %}#}
+{#                            {{ form.national_code|attr:"id:MelliCode"|attr:"class:error w-100" }}#}
 {#                        {% else %}#}
-{#                            {{ form.melli_code|attr:"id:MelliCode"|attr:"class:w-100" }}#}
+{#                            {{ form.national_code|attr:"id:MelliCode"|attr:"class:w-100" }}#}
 {#                        {% endif %}#}
 {#                        <div class="error">#}
-{#                            <span class="error-body">{% render_field form.melli_code.errors %}</span>#}
+{#                            <span class="error-body">{% render_field form.national_code.errors %}</span>#}
 {#                        </div>#}
 {#                    </div>#}
 {#                </div>#}
