--- a/industry/templates/industry/layouts/initial_information.html
+++ b/industry/templates/industry/layouts/initial_information.html
@@ -64,9 +64,14 @@
                             <div class="form-group">
                                 <label class="rankLabel" for="id_industry_type">نوع شرکت</label>
                                 <select id="id_industry_type" name="industry_type" class="w-100 {% if form.industry_type.errors %}error{% endif %}">
-                                    <option dir="rtl" value="-1">انتخاب کنید ...</option>
-                                    <option value="0">خصوصی</option>
-                                    <option value="1">دولتی</option>
+                                    <option selected dir="rtl" value="">انتخاب کنید ...</option>
+                                    {% for option in form.industry_type %}
+                                      {% if not forloop.first %}
+                                          {{ option }}
+                                      {% endif %}
+                                    {% endfor %}
+{#                                  <option value="0">خصوصی</option>#}
+{#                                  <option value="1">دولتی</option>#}
                                 </select>
                                 <div class="error">
                                     {% render_field form.industry_type.errors %}
@@ -118,17 +123,17 @@
                                     {% render_field form.phone_number.errors %}
                                 </div>
                             </div>
-                            <div class="form-group">
-                                <label for="id_email_address">پست الکترونیکی</label>
-                                {% if form.email_address.errors %}
-                                    {% render_field form.email_address class+="w-100 error" %}
-                                {% else %}
-                                    {% render_field form.email_address class+="w-100" %}
-                                {% endif %}
-                                <div class="error">
-                                    {% render_field form.email_address.errors %}
-                                </div>
-                            </div>
+{#                            <div class="form-group">#}
+{#                                <label for="id_email_address">پست الکترونیکی</label>#}
+{#                                {% if form.email_address.errors %}#}
+{#                                    {% render_field form.email_address class+="w-100 error" %}#}
+{#                                {% else %}#}
+{#                                    {% render_field form.email_address class+="w-100" %}#}
+{#                                {% endif %}#}
+{#                                <div class="error">#}
+{#                                    {% render_field form.email_address.errors %}#}
+{#                                </div>#}
+{#                            </div>#}
                         </div>
                         <div class="col-md-4"></div>
                     </div>
