fix researcher technique review

--- a/researcher/templates/researcher/technique.html
+++ b/researcher/templates/researcher/technique.html
@@ -49,7 +49,7 @@
                                             <div class="label">سطح تسلط</div>
                                             <div class="value">
                                                 <span>
-                                                    {% if tech.level %}
+                                                    {% if tech.is_validated %}
                                                         {{ tech.level }}
                                                     {% else %}
                                                         در حال بررسی...
