change the IndustryForm to R&D and ResearchGroup Profile

--- a/expert/templates/expert/index.html
+++ b/expert/templates/expert/index.html
@@ -149,7 +149,7 @@
                                                     <div class="col-md-3">
                                                         <div class="industry-logo-preview">
                                                             <img id="industry_logo"
-                                                                 src="{{ project.industry_creator.industryform.photo.url}}"
+                                                                 src="{{ project.industry_creator.profile.photo.url}}"
                                                                  alt="industry-logo">
                                                         </div>
                                                         <div class="budget-section">
