--- a/industry/templates/industry/index.html
+++ b/industry/templates/industry/index.html
@@ -15,7 +15,7 @@
     {% include 'industry/layouts/expertResume.html' %}
 {% endblock %}
 
-{% block name %}{{ request.user.industryuser.industryform }}{% endblock %}
+{% block name %}{{ request.user.industryuser.profile }}{% endblock %}
 
 {% block content %}
     <div class="row">
