--- a/industry/templates/industry/newProject.html
+++ b/industry/templates/industry/newProject.html
@@ -7,7 +7,7 @@
           href="https://cdnjs.cloudflare.com/ajax/libs/ion-rangeslider/2.3.0/css/ion.rangeSlider.min.css"/>
     <link rel="stylesheet" href="{% static 'industry/css/inputTags.min.css' %}">
 {% endblock %}
-{% block name %}{{ request.user.industryuser.industryform }}{% endblock %}
+{% block name %}{{ request.user.industryuser.profile }}{% endblock %}
 
 {% block content %}
     <div class="row">
