--- a/templates/chamran_admin/messages.html
+++ b/templates/chamran_admin/messages.html
@@ -3,7 +3,7 @@
 {% block title %}پیام ها{% endblock %}
 {% block name %}
     {{ request.user.expertuser.expertform }}
-    {{ request.user.industryuser.industryform }}
+    {{ request.user.industryuser.profile }}
     {{ request.user.researcheruser.researcherprofile }}
 {% endblock name %}
 
